@@ -157,4 +157,8 @@
     <string name="show_number_totals_summary">Displays count of each number placed.</string>
     <string name="what_is_new">What\'s new</string>
     
+   	<!-- Strings added/changed in 1.1.0 -->
+    <string name="fill_in_notes_summary">Enable "Fill in notes" menu item.</string>
+    
+    
 </resources>
