@@ -19,6 +19,11 @@
                 android:title="@string/show_number_totals"
                 android:summary="@string/show_number_totals_summary"
                 android:defaultValue="false" />
+        <CheckBoxPreference
+                android:key="fill_in_notes_enabled"
+                android:title="@string/fill_in_notes"
+                android:summary="@string/fill_in_notes_summary"
+                android:defaultValue="false" />
     </PreferenceCategory>
     <PreferenceCategory
             android:title="@string/input_methods">
