@@ -10,6 +10,7 @@
 <li>Android 2.2 - added move application to SD card support.</li>
 <li>Fixes few bugs reported via new Android 2.2 "Report" button.
 <li>Few visual tweaks for Nexus One.</li>
+<li>"Fill in notes" menu item can be now enabled in game settings.</li>
 </ul>
 <b>1.1.0</b>
 <ul>
